feat: add domainCodes param
